# CarbonIQ

./: README.md  carboniq.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  routes.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: emissions.py
backend/app/utils/: csv_loader.py
data/: emission_factors.json  transactions.csv
frontend/: app.py
frontend/pages/: Analytics.py  Dashboard.py  Insights.py  Settings.py
